# jarvis-line

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml
.github/workflows/: ci.yml  release-artifacts.yml  security.yml  soak.yml
.superpowers/sdd/: task-1-report.md  task-4b-report.md
apps/macos/JarvisLine/: Package.swift  README.md
apps/macos/JarvisLine/Resources/: AppIcon.icns  Info.plist
apps/macos/JarvisLine/Sources/: JarvisConfig.swift  JarvisConfigContract.swift  JarvisLineApp.swift  ReliabilityContract.swift  RuntimeDiagnostics.swift  SettingsState.swift  SettingsWindowView.swift  SetupAssistant.swift  SetupContract.swift  StorageCleanup.swift
apps/macos/JarvisLine/Tests/JarvisLineTests/: JarvisConfigContractTests.swift  JarvisLineModelTests.swift  ReliabilityContractTests.swift  RuntimeDiagnosticsTests.swift  SettingsStateTests.swift  SetupAssistantModelTests.swift  SetupContractTests.swift  StorageCleanupTests.swift
apps/macos/JarvisLine/scripts/: package-app.sh  package-dmg.sh
docs/: COMMANDS.md  CONFIGURATION.md  EVENT-PROTOCOL.md  INSTRUCTIONS.md  SUPPORT-MATRIX.md  TTS.md
docs/recipes/: edge-tts.md  kokoro.md  openai-tts.md  tts-command.md
docs/superpowers/plans/: 2026-07-10-runtime-platform-improvements.md  2026-07-11-guided-setup.md  2026-07-16-attention-events.md  2026-07-18-macos-settings-redesign.md  2026-07-18-storage-cleanup.md  2026-07-19-reliability-center-soak.md  2026-07-20-final-completion-chime.md
docs/superpowers/specs/: 2026-07-10-guided-setup-design.md  2026-07-16-attention-events-design.md  2026-07-18-macos-settings-redesign.md  2026-07-18-storage-cleanup-design.md  2026-07-19-reliability-center-soak-design.md  2026-07-20-final-completion-chime-design.md
scripts/: benchmark_attention_hook.py  check_version_consistency.py  soak_runtime.py  validate_sbom.py  verify-macos-artifacts.sh  verify_clean_install.py
src/jarvis_line/: __init__.py  attention.py  audio_worker.py  cleanup.py  cli.py  codex_hook.py  completion_chime.py  config_contract.py  diagnostics.py  events.py  kokoro_assets.py  kokoro_say.py  queue_policy.py  reliability.py  setup_flow.py  soak.py  watcher.py
tests/: run_smoke.py  test_attention.py  test_audio_worker.py  test_clean_install_script.py  test_cleanup.py  test_cli.py  test_cli_setup.py  test_codex_hook.py  test_completion_chime.py  test_config_contract.py  test_diagnostics.py  test_events.py  test_kokoro_assets.py  test_kokoro_say_player.py  test_queue_policy.py  test_release_metadata.py  test_reliability.py  test_setup_flow.py  test_soak.py  test_validate_sbom.py  test_watcher.py
