[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "jarvis-line"
version = "0.1.0b1"
description = "Speak short assistant status lines from Codex/Claude sessions."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Jarvis Line contributors" }]
keywords = ["codex", "agents", "tts", "text-to-speech", "developer-tools"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
  "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
kokoro = ["kokoro-onnx", "sounddevice", "soundfile", "numpy"]
test = ["pytest>=8"]

[project.scripts]
jarvis-line = "jarvis_line.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
