[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "jarvis-line"
version = "0.3.1"
description = "Speak short status lines from AI coding agents."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Jarvis Line contributors" }]
keywords = ["codex", "agents", "tts", "text-to-speech", "developer-tools"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
  "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
kokoro = ["kokoro-onnx", "sounddevice", "soundfile", "numpy"]
test = ["pytest>=8", "tomli>=2; python_version<'3.11'"]

[project.scripts]
jarvis-line = "jarvis_line.cli:main"

[tool.hatch.build]
exclude = [
  "/apps/macos/JarvisLine/.build",
  "/apps/macos/JarvisLine/dist",
  "/dist",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
